--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@expo/ui": "0.2.0-beta.7",
+    "@expo/ui": "~0.2.0-beta.9",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
@@ -21,22 +21,22 @@
     "@react-navigation/stack": "^7.6.3",
     "buffer": "^6.0.3",
     "crypto-js": "^4.2.0",
-    "expo": "54.0.25",
-    "expo-application": "~7.0.7",
-    "expo-blur": "~15.0.7",
-    "expo-camera": "~17.0.9",
-    "expo-constants": "~18.0.10",
-    "expo-dev-client": "~6.0.18",
-    "expo-device": "^8.0.9",
-    "expo-glass-effect": "~0.1.6",
-    "expo-haptics": "~15.0.7",
-    "expo-linking": "~8.0.9",
-    "expo-localization": "~17.0.7",
-    "expo-navigation-bar": "~5.0.9",
-    "expo-router": "~6.0.15",
-    "expo-splash-screen": "~31.0.11",
-    "expo-status-bar": "~3.0.8",
-    "expo-system-ui": "~6.0.8",
+    "expo": "~54.0.27",
+    "expo-application": "~7.0.8",
+    "expo-blur": "~15.0.8",
+    "expo-camera": "~17.0.10",
+    "expo-constants": "~18.0.11",
+    "expo-dev-client": "~6.0.20",
+    "expo-device": "~8.0.10",
+    "expo-glass-effect": "~0.1.8",
+    "expo-haptics": "~15.0.8",
+    "expo-linking": "~8.0.10",
+    "expo-localization": "~17.0.8",
+    "expo-navigation-bar": "~5.0.10",
+    "expo-router": "~6.0.17",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
     "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
